roles/common/files/iptables-save
# Generated by iptables-save v1.6.1 on Tue Sep 17 15:24:00 2019
*mangle
:PREROUTING ACCEPT [1018:66925]
:INPUT ACCEPT [964:63772]
:FORWARD ACCEPT [54:3153]
:OUTPUT ACCEPT [160:27369]
:POSTROUTING ACCEPT [160:27369]
COMMIT
# Completed on Tue Sep 17 15:24:00 2019
# Generated by iptables-save v1.6.1 on Tue Sep 17 15:24:00 2019
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue Sep 17 15:24:00 2019
# Generated by iptables-save v1.6.1 on Tue Sep 17 15:24:00 2019
*filter
:INPUT DROP [713:42751]
:FORWARD DROP [54:3153]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m comment --comment "ssh access" -j ACCEPT
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m comment --comment "New not syn" -j DROP
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j REJECT --reject-with tcp-reset
-A INPUT -m state --state RELATED,ESTABLISHED -m comment --comment "Allow established connections" -j ACCEPT
-A INPUT -i lo -m comment --comment "Allow local" -j ACCEPT
-A INPUT -p icmp -m comment --comment "Allow ICMP" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m comment --comment "http access" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m comment --comment "https access" -j ACCEPT
COMMIT
# Completed on Tue Sep 17 15:24:00 2019
